force-app/main/default/objects/Wage_Claim__c/fields/Meal_Period_Wages_Claim_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Meal_Period_Wages_Claim_Period_End_Date__c</fullName>
    <label>Meal Period Wages Claim Period End Date</label>
    <type>Date</type>
</CustomField>