force-app/main/default/objects/Wage_Claim__c/fields/Meal_Premium__c.field-meta.xml
<CustomField>
    <fullName>Meal_Premium__c</fullName>
    <label>Meal Premium</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>