force-app/main/default/objects/Wage_Claim__c/fields/Minimum_Wage__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Wage__c</fullName>
    <label>Minimum Wage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>