force-app/main/default/objects/Wage_Claim__c/fields/Name_of_Person_In_Charge__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Person_In_Charge__c</fullName>
    <label>Name of Person In Charge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>