force-app/main/default/objects/Wage_Claim__c/fields/new_total_interest_wages_times_days__c.field-meta.xml
<CustomField>
    <fullName>new_total_interest_wages_times_days__c</fullName>
    <description>Listed in FMP as: new_total interest wages times days</description>
    <label>new_total interest wages times days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>