force-app/main/default/objects/Wage_Claim__c/fields/nunc_pro_tunc__c.field-meta.xml
<CustomField>
    <fullName>nunc_pro_tunc__c</fullName>
    <description>Listed in FMP as: nunc pro tunc</description>
    <label>nunc pro tunc</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nunc Pro Tunc</fullName>
            </value>
            <value>
                <fullName>Amended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>