force-app/main/default/objects/Wage_Claim__c/fields/ODA_Date__c.field-meta.xml
<CustomField>
    <fullName>ODA_Date__c</fullName>
    <label>ODA Date</label>
    <type>Date</type>
</CustomField>