force-app/main/default/objects/Wage_Claim__c/fields/ODA_States__c.field-meta.xml
<CustomField>
    <fullName>ODA_States__c</fullName>
    <label>ODA States</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Affirmed</fullName>
            </value>
            <value>
                <fullName>Set aside and vacated, and hearing shall be reset, noticed and heard on the original complaint herein.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>