force-app/main/default/objects/Wage_Claim__c/fields/Oracle__c.field-meta.xml
<CustomField>
    <fullName>Oracle__c</fullName>
    <label>Oracle #</label>
    <length>80</length>
    <type>Text</type>
</CustomField>