force-app/main/default/objects/Wage_Claim__c/fields/other_comp__c.field-meta.xml
<CustomField>
    <fullName>other_comp__c</fullName>
    <description>Listed in FMP as: other comp</description>
    <label>other comp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>