force-app/main/default/objects/Wage_Claim__c/fields/Other_Wage_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>Other_Wage_Type_Text__c</fullName>
    <label>Other Wage Type Text</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>