force-app/main/default/objects/Wage_Claim__c/fields/Overtime_Wages_Claim_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Wages_Claim_Period_End_Date__c</fullName>
    <label>Overtime Wages Claim Period End Date</label>
    <type>Date</type>
</CustomField>