force-app/main/default/objects/Wage_Claim__c/fields/Paid_a_different_amount_based_on_task__c.field-meta.xml
<CustomField>
    <fullName>Paid_a_different_amount_based_on_task__c</fullName>
    <label>Paid a different amount based on task</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>