force-app/main/default/objects/Wage_Claim__c/fields/Paid_per_amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_per_amount__c</fullName>
    <label>Paid per (amount)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>