force-app/main/default/objects/Wage_Claim__c/fields/Paid_per_other__c.field-meta.xml
<CustomField>
    <fullName>Paid_per_other__c</fullName>
    <label>Paid per (other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>