force-app/main/default/objects/Wage_Claim__c/fields/Penalties_for_bounced_checks__c.field-meta.xml
<CustomField>
    <fullName>Penalties_for_bounced_checks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Penalties for &quot;bounced&quot; checks</label>
    <type>Checkbox</type>
</CustomField>