force-app/main/default/objects/Wage_Claim__c/fields/Phase_Status__c.field-meta.xml
<CustomField>
    <fullName>Phase_Status__c</fullName>
    <label>Phase Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Phase__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>WCA 2</fullName>
            </value>
            <value>
                <fullName>WCA 2 Sent</fullName>
            </value>
            <value>
                <fullName>Assigned to Deputy</fullName>
            </value>
            <value>
                <fullName>Clarification Requested</fullName>
            </value>
            <value>
                <fullName>Clarification Requested 2</fullName>
            </value>
            <value>
                <fullName>Clarification Received</fullName>
            </value>
            <value>
                <fullName>WCA 13 Sent</fullName>
            </value>
            <value>
                <fullName>Awaiting response from Plaintiff</fullName>
            </value>
            <value>
                <fullName>Scheduled for conference</fullName>
            </value>
            <value>
                <fullName>Notice to Plaintiff returned by USPS</fullName>
            </value>
            <value>
                <fullName>Address Correction requested</fullName>
            </value>
            <value>
                <fullName>Address Correction requested 2</fullName>
            </value>
            <value>
                <fullName>Address Correction Received</fullName>
            </value>
            <value>
                <fullName>Conference continuance requested</fullName>
            </value>
            <value>
                <fullName>Conference Rescheduled</fullName>
            </value>
            <value>
                <fullName>Continuance Request denied</fullName>
            </value>
            <value>
                <fullName>Release Sent to Plaintiff</fullName>
            </value>
            <value>
                <fullName>Pre Berman Packet Sent</fullName>
            </value>
            <value>
                <fullName>Signed Complaint Form received</fullName>
            </value>
            <value>
                <fullName>Case refered to hearing</fullName>
            </value>
            <value>
                <fullName>Transmittal approved by Senior Deputy</fullName>
            </value>
            <value>
                <fullName>Awaiting appeal period</fullName>
            </value>
            <value>
                <fullName>Hearing Scheduled</fullName>
            </value>
            <value>
                <fullName>Notice of Hearing to Plaintiff returned</fullName>
            </value>
            <value>
                <fullName>Continuance request received</fullName>
            </value>
            <value>
                <fullName>Hearing Continuance request denied</fullName>
            </value>
            <value>
                <fullName>Amended Complaint sent to Plaintiff</fullName>
            </value>
            <value>
                <fullName>Hearing rescheduled</fullName>
            </value>
            <value>
                <fullName>Response received from Plaintiff</fullName>
            </value>
            <value>
                <fullName>Date of Hearing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>