force-app/main/default/objects/Wage_Claim__c/fields/Phase_Statuses_JSON__c.field-meta.xml
<CustomField>
    <fullName>Phase_Statuses_JSON__c</fullName>
    <label>Phase Statuses JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>