force-app/main/default/objects/Wage_Claim__c/fields/Plaintiff_Name__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Name__c</fullName>
    <label>Plaintiff Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>