force-app/main/default/objects/Wage_Claim__c/fields/Plaintiff_Only_Attended_Conference__c.field-meta.xml
<CustomField>
    <fullName>Plaintiff_Only_Attended_Conference__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plaintiff Only Attended</label>
    <type>Checkbox</type>
</CustomField>