force-app/main/default/objects/Wage_Claim__c/fields/Post_Hearing_Interest_Per_LC_2802__c.field-meta.xml
<CustomField>
    <fullName>Post_Hearing_Interest_Per_LC_2802__c</fullName>
    <formula>ABS( ODA_Date__c - Judgment_Date__c ) * 0.000273973 * Expenses_Due__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Post-Hearing Interest Per LC 2802</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>