force-app/main/default/objects/Wage_Claim__c/fields/Post_Hearing_Interest_Per_LC_98_1__c.field-meta.xml
<CustomField>
    <fullName>Post_Hearing_Interest_Per_LC_98_1__c</fullName>
    <formula>ABS( ODA_Date__c - Judgment_Date__c) * 0.000273973 * Subtotal_LC_98_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Post-Hearing Interest Per LC 98.1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>