force-app/main/default/objects/Wage_Claim__c/fields/Promised_per_amount__c.field-meta.xml
<CustomField>
    <fullName>Promised_per_amount__c</fullName>
    <label>Promised per (amount)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>