force-app/main/default/objects/Wage_Claim__c/fields/Promised_per_other__c.field-meta.xml
<CustomField>
    <fullName>Promised_per_other__c</fullName>
    <label>Promised per (other)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>