force-app/main/default/objects/Wage_Claim__c/fields/Quit_On_Date__c.field-meta.xml
<CustomField>
    <fullName>Quit_On_Date__c</fullName>
    <label>Quit On Date</label>
    <type>Date</type>
</CustomField>