force-app/main/default/objects/Wage_Claim__c/fields/Referred_to_Hearing_for_IC_Determination__c.field-meta.xml
<CustomField>
    <fullName>Referred_to_Hearing_for_IC_Determination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Referred to Hearing for IC Determination</label>
    <type>Checkbox</type>
</CustomField>