force-app/main/default/objects/Wage_Claim__c/fields/Regional_Manager__c.field-meta.xml
<CustomField>
    <fullName>Regional_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regional Manager</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Regional_Manager__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Wage_Claims8</relationshipName>
    <type>Lookup</type>
</CustomField>