force-app/main/default/objects/Wage_Claim__c/fields/Regular_Wages_Claim_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Regular_Wages_Claim_Period_Start_Date__c</fullName>
    <label>Regular Wages Claim Period Start Date</label>
    <type>Date</type>
</CustomField>