force-app/main/default/objects/Wage_Claim__c/fields/Rejection_Letter_Text__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Letter_Text__c</fullName>
    <label>Rejection Letter Text</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>