force-app/main/default/objects/Wage_Claim__c/fields/Reporting_Time_Pay_Amount_Earned_Claimed__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Time_Pay_Amount_Earned_Claimed__c</fullName>
    <label>Reporting Time Pay Amount Earned/Claimed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>