force-app/main/default/objects/Wage_Claim__c/fields/Rest_Period_Wages_Amount_Earned_Claimed__c.field-meta.xml
<CustomField>
    <fullName>Rest_Period_Wages_Amount_Earned_Claimed__c</fullName>
    <label>Rest Period Wages Amount Earned/Claimed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>