force-app/main/default/objects/Wage_Claim__c/fields/Rest_Period_Wages_Claim_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Rest_Period_Wages_Claim_End_Date__c</fullName>
    <label>Rest Period Wages Claim End Date</label>
    <type>Date</type>
</CustomField>