force-app/main/default/objects/Wage_Claim__c/fields/Rest_Period_Wages_Claim_Period_StartDate__c.field-meta.xml
<CustomField>
    <fullName>Rest_Period_Wages_Claim_Period_StartDate__c</fullName>
    <label>Rest Period Wages Claim Period StartDate</label>
    <type>Date</type>
</CustomField>