force-app/main/default/objects/Wage_Claim__c/fields/Rest_Premium_Collected__c.field-meta.xml
<CustomField>
    <fullName>Rest_Premium_Collected__c</fullName>
    <label>Rest Premium Collected</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>