force-app/main/default/objects/Wage_Claim__c/fields/Retaliation_Complaint_filed__c.field-meta.xml
<CustomField>
    <fullName>Retaliation_Complaint_filed__c</fullName>
    <inlineHelpText>If you have been retaliated against, you may file a retaliation Month Day Year complaint by filling out another form, “DLSE FORM 205.”</inlineHelpText>
    <label>Retaliation Complaint filed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>