force-app/main/default/objects/Wage_Claim__c/fields/Select_Which_Applies__c.field-meta.xml
<CustomField>
    <fullName>Select_Which_Applies__c</fullName>
    <label>Select Which Applies</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Still Working For Employer</fullName>
            </value>
            <value>
                <fullName>Quit on (Date)</fullName>
            </value>
            <value>
                <fullName>Discharged on (Date)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>