force-app/main/default/objects/Wage_Claim__c/fields/Specify_Other_Frequency_Promised__c.field-meta.xml
<CustomField>
    <fullName>Specify_Other_Frequency_Promised__c</fullName>
    <label>Specify Other Frequency Promised</label>
    <length>255</length>
    <type>Text</type>
</CustomField>