force-app/main/default/objects/Wage_Claim__c/fields/Split_Shift_Prem_Amount_Earned_Claimed__c.field-meta.xml
<CustomField>
    <fullName>Split_Shift_Prem_Amount_Earned_Claimed__c</fullName>
    <label>Split Shift Prem Amount Earned/Claimed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>