force-app/main/default/objects/Wage_Claim__c/fields/Split_Shift_Prem_Claim_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Split_Shift_Prem_Claim_Period_Start_Date__c</fullName>
    <label>Split Shift Prem Claim Period Start Date</label>
    <type>Date</type>
</CustomField>