force-app/main/default/objects/Wage_Claim__c/fields/Sr_Deputy_Labor_Commissioner_Email__c.field-meta.xml
<CustomField>
    <fullName>Sr_Deputy_Labor_Commissioner_Email__c</fullName>
    <label>Sr. Deputy Labor Commissioner Email</label>
    <type>Email</type>
</CustomField>