force-app/main/default/objects/Wage_Claim__c/fields/Subtotal_LC_98_1__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_LC_98_1__c</fullName>
    <formula>Other_Wage_Due__c + Overtime_Due__c + Meal_Premium_Due__c + Rest_Premium_Due__c + Improper_Deductions__c + Minimum_Wage_Due__c + Vacation_Due__c +  Heat_Recovery_Premium_Due__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subtotal LC 98.1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>